* CHANGES IN dplR VERSION 1.4.5

Various .R files:
-----------------

- Updates to sequence generation, e.g. use seq_along and seq_len where
  applicable

Files: ccf.series.rwl.R, corr.rwl.seg.R, corr.series.seg.R, series.rwl.plot.R
-----------------------------------------------------------------------------

- Fixed a bug where segment length was always actually one year longer
  than the specified seg.length (not in corr.series.seg.R).
- Fixed a bug where the requirement of fitting at least two segments
  did not take into account overlapping segments (seg.lag), therefore
  requiring more than the minimum number of years (not in corr.rwl.seg.R).
- Added a "plus 1" option (floor.plus1) to location of first segment.
  Works together with parameter bin.floor. Default value is FALSE.

File: tbrm.c
------------

- "Nothing to sum" case, when there are some numbers but all are too far
  from median, returns NaN instead of NA.  Finally, this is consistent
  with tbrm() coded in R, prior to dplR 1.2.7.

File: write.compact.R
---------------------

- Fixed two precedence issues that luckily didn't result in erroneous
  behaviour of the function

2011-07-03 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.4
* Changes in documentation will not be reported anymore

Various .R files:
-----------------

- Parameters not changed by assignment anymore (complaint by
  codetools). Applies to direct assignment; assign() etc go unnoticed by
  codetools.

File: ccf.series.rwl.R
----------------------

- Cosmetic changes (white spaces, assignment operator)
- Parameter 'cex' is given in the call to xyplot, like 'col.line'. Both go
  to 'panel' in '...'.
- Parameter 'col' removed from function 'panel'
- Some extra steps are taken because we want to ensure correct operation
  now when formal parameters are not changed by assignment
- (1 + 1 - pcrit) / 2 == 1 - pcrit / 2 (at least within floating point
  precision), so we use the latter which is a simpler form

File: chron.R
-------------
